# arvix-mcp-server

./: .gitignore  README.md  pyproject.toml  test_local.py  test_mcp.py
.github/workflows/: deploy.yml
src/: arxiv_client.py  embedder.py  rag.py  reading_list.py  server.py  vector_store.py  vectorless_rag.py
tests/: test_core.py
web/: index.html
